# ak2-projekt

./: README.md  nb-test.bat  out.asm
ak2-projekt/: README.md
ak2-projekt/docs/: arithmetic.md  baza-teoretyczna-ZM.md
ak2-projekt/headers/: DataSets.h  SignedMagnitude.h
ak2-projekt/src/: DataSets.cpp  SignedMagnitude.cpp
ak2-projekt/test/: ArithmeticTest.cpp  DataSetsTest.cpp  SignedMagnitudeTest.cpp
arithmetic_test_build/: CMakeLists.txt
basic_app/: CMakeLists.txt
headers/: Arithmetic.h  DataSets.h  NaturalBinary.h  SignedMagnitude.h
signed_magnitude_test_build/: CMakeLists.txt
src/: Arithmetic.cpp  DataSets.cpp  NaturalBinary.cpp  SignedMagnitude.cpp  main.cpp
src/headers/: Arithmetic.h  SignedMagnitude.h
test/: ArithmeticTest.cpp  DataSetsTest.cpp  NaturalBinaryTest.cpp  SignedMagnitudeTest.cpp
